SF Primes/src/objects/Answer__c.object
<CustomObject>
    <description>Captures the response for a Discovery Question to the respective Workbook and associated with a Project.</description>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <formula>TEXT(Question__r.Answer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloneable__c</fullName>
        <formula>Question__r.Cloneable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloneable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Answer__c</fullName>
        <label>Currency Answer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Answer__c</fullName>
        <label>Date Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Site_Workbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discovery Site Workbook</label>
        <referenceTo>Site_Workbook__c</referenceTo>
        <relationshipLabel>Discovery Answers</relationshipLabel>
        <relationshipName>Discovery_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MultiSelect_Picklist_Answer__c</fullName>
        <label>MultiSelect Picklist Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not applicable answer.</description>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Discovery_Answer_Wkbk_Categories__c</fullName>
        <label>No of Discovery Answer Wkbk Categories</label>
        <summaryFilterItems>
            <field>Discovery_Answer_Workbook_Category__c.Answer_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Discovery_Answer_Workbook_Category__c.Answer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Answer__c</fullName>
        <label>Number Answer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Questions_In_Category__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Questions (In Category)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Answer__c</fullName>
        <label>Phone Answer</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_Answer__c</fullName>
        <label>Picklist Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <formula>&apos;Removed&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Discovery Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Answer__c</fullName>
        <label>Text Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL_Answer__c</fullName>
        <label>URL Answer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YesNo_Answer__c</fullName>
        <label>Yes/No Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Discovery Answer</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>